<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/orders_list" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notifications" />

    <item
        android:id="@+id/navigation_posts"
        android:icon="@drawable/ic_poll_black_24dp"
        android:title="@string/posts" />
    <item
        android:id="@+id/navigation_return_list"
        android:icon="@drawable/ic_assignment_return_black_24dp"
        android:title="@string/return_list" />



</menu>
