<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardElevation="7dp">

    <RelativeLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/order_id"
            android:textStyle="bold"
            android:id="@+id/return_item_id"/>

        <TextView
            android:layout_below="@id/return_item_id"
            android:textSize="15sp"
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/return_item_name"/>

        <TextView
            android:layout_alignParentEnd="true"
            android:text="@string/return_date"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/return_delivery_date"/>

        <TextView
            android:layout_below="@id/return_delivery_date"
            android:layout_alignParentEnd="true"
            android:textSize="15sp"
            android:text="@string/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/return_item_quantity"/>

        <TextView
            android:textSize="15sp"
            android:text="@string/location"
            android:layout_below="@id/return_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/return_item_delivery_location"/>
        <TextView
            android:textSize="15sp"
            android:text="@string/reason"
            android:layout_below="@id/return_item_delivery_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/return_reason"/>


    </RelativeLayout>

</android.support.v7.widget.CardView>