<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardElevation="7dp">

    <RelativeLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/order_id"
            android:textStyle="bold"
            android:id="@+id/order_item_id"/>

        <TextView
            android:layout_below="@id/order_item_id"
            android:textSize="15sp"
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/return_item_name"/>

        <TextView
            android:layout_alignParentEnd="true"
            android:text="Date:"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/return_delivery_date"/>

        <TextView
            android:layout_below="@id/return_item_delivery_location"
            android:layout_toLeftOf="@id/button_track"
            android:textSize="15sp"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:text="Quantity: "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/return_item_quantity"/>

        <TextView
            android:textSize="15sp"
            android:text="@string/location"
            android:layout_below="@id/return_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/return_item_delivery_location"/>

        <Button
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/button_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track"
            android:id="@+id/button_track"
            android:layout_below="@id/return_item_delivery_location"
            />

        <Button
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/returnText"
            android:id="@+id/button_return"
            android:layout_below="@id/return_item_delivery_location"
            />

    </RelativeLayout>

</android.support.v7.widget.CardView>