<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/username"
                android:paddingRight="@dimen/text_spacing"
                android:paddingLeft="@dimen/text_spacing"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:id="@+id/username"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/email"
                android:paddingRight="@dimen/text_spacing"
                android:paddingLeft="@dimen/text_spacing"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email"
                    android:inputType="textEmailAddress"
                    android:editable="false"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/mobileno"
                android:paddingRight="@dimen/text_spacing"
                android:paddingLeft="@dimen/text_spacing"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="10"
                    android:inputType="phone"
                    android:id="@+id/mobile"
                    >

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/address"
                android:paddingRight="@dimen/text_spacing"
                android:paddingLeft="@dimen/text_spacing"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:id="@+id/address"
                    >
                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_margin="@dimen/text_spacing"
                    android:text="@string/get_location"
                    android:id="@+id/getLocation"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@color/colorAccent"
                    />
                <TextView
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:id="@+id/latlng"
                    android:layout_marginLeft="5dp"
                    android:text="Getting......"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/getLocation"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="@dimen/text_spacing"
                    android:text="@string/update"
                    android:id="@+id/update"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@color/colorAccent"
                    />
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                />

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/history_recycler_view">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>
    </ScrollView>
</FrameLayout>