<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <android.support.v4.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:hint="@string/item_name"
            android:paddingRight="@dimen/text_spacing"
            android:paddingLeft="@dimen/text_spacing"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/item_name"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:hint="@string/quantity"
            android:paddingRight="@dimen/text_spacing"
            android:paddingLeft="@dimen/text_spacing"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/item_quantity"
                android:inputType="number"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:hint="@string/mobileno"
            android:paddingRight="@dimen/text_spacing"
            android:paddingLeft="@dimen/text_spacing"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:inputType="phone"
                android:id="@+id/mobile"
                >

            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:hint="@string/address"
            android:paddingRight="@dimen/text_spacing"
            android:paddingLeft="@dimen/text_spacing"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:id="@+id/address"
                >
            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>
        <Spinner
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>